[gd_scene load_steps=12 format=2]

[ext_resource path="res://Assets/Images/logoSmall.png" type="Texture" id=1]
[ext_resource path="res://Assets/Fonts/Aquire-BW0ox.otf" type="DynamicFontData" id=2]
[ext_resource path="res://Scenes/Menu/UserInfo/UserInfo.gd" type="Script" id=3]
[ext_resource path="res://Assets/Fonts/Audiowide-en4g.ttf" type="DynamicFontData" id=4]

[sub_resource type="DynamicFont" id=1]
size = 80
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=2]
size = 50
font_data = ExtResource( 4 )

[sub_resource type="DynamicFont" id=5]
size = 30
font_data = ExtResource( 4 )

[sub_resource type="StyleBoxFlat" id=7]
bg_color = Color( 1, 1, 1, 1 )

[sub_resource type="StyleBoxFlat" id=6]
bg_color = Color( 1, 1, 1, 1 )

[sub_resource type="DynamicFont" id=8]
size = 32
use_filter = true
font_data = ExtResource( 4 )

[sub_resource type="StyleBoxFlat" id=9]
bg_color = Color( 1, 1, 1, 1 )

[node name="Control" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 3 )

[node name="Background" type="ColorRect" parent="."]
margin_right = 1920.0
margin_bottom = 1080.0
color = Color( 0, 0, 0, 1 )

[node name="UsernameLabel" type="Label" parent="."]
margin_left = 3.0
margin_right = 1921.0
margin_bottom = 382.0
custom_colors/font_color = Color( 0.945098, 0.937255, 0.905882, 1 )
custom_fonts/font = SubResource( 1 )
text = "Username"
align = 1
valign = 1

[node name="EditBio" type="Label" parent="."]
margin_left = 3.0
margin_top = 390.0
margin_right = 1921.0
margin_bottom = 526.0
custom_colors/font_color = Color( 0.945098, 0.937255, 0.905882, 1 )
custom_fonts/font = SubResource( 1 )
text = "Edit Bio"
align = 1
valign = 1

[node name="EmailLabel" type="Label" parent="."]
margin_left = 3.0
margin_top = 262.0
margin_right = 1920.0
margin_bottom = 398.0
custom_colors/font_color = Color( 0.945098, 0.937255, 0.905882, 1 )
custom_fonts/font = SubResource( 2 )
text = "Email"
align = 1
valign = 1

[node name="TextEditBg" type="ColorRect" parent="."]
margin_left = 128.0
margin_top = 576.0
margin_right = 1792.0
margin_bottom = 960.0

[node name="TextEdit" type="TextEdit" parent="TextEditBg"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 40.0
margin_top = 40.0
margin_right = -40.0
margin_bottom = -40.0
custom_colors/font_color_selected = Color( 0, 0, 0, 1 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_fonts/font = SubResource( 5 )
custom_styles/focus = SubResource( 7 )
custom_styles/normal = SubResource( 6 )
wrap_enabled = true

[node name="SaveButton" type="Button" parent="."]
margin_left = 1540.0
margin_top = 438.0
margin_right = 1796.0
margin_bottom = 518.0
rect_min_size = Vector2( 200, 80 )
rect_pivot_offset = Vector2( -1976, -648 )
size_flags_horizontal = 4
custom_colors/font_color_disabled = Color( 0, 0, 0, 1 )
custom_colors/font_color_focus = Color( 0, 0, 0, 1 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_colors/font_color_hover = Color( 0, 0, 0, 1 )
custom_colors/font_color_pressed = Color( 0, 0, 0, 1 )
custom_fonts/font = SubResource( 8 )
custom_styles/normal = SubResource( 9 )
text = "Save"

[node name="BackButton" type="Button" parent="."]
margin_left = 1540.0
margin_top = 158.0
margin_right = 1796.0
margin_bottom = 238.0
rect_min_size = Vector2( 200, 80 )
rect_pivot_offset = Vector2( -1976, -648 )
size_flags_horizontal = 4
custom_colors/font_color_disabled = Color( 0, 0, 0, 1 )
custom_colors/font_color_focus = Color( 0, 0, 0, 1 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_colors/font_color_hover = Color( 0, 0, 0, 1 )
custom_colors/font_color_pressed = Color( 0, 0, 0, 1 )
custom_fonts/font = SubResource( 8 )
custom_styles/normal = SubResource( 9 )
text = "Go Back"

[node name="Timer" type="Timer" parent="."]

[node name="LogoSmall" type="Sprite" parent="."]
position = Vector2( 216, 192.25 )
scale = Vector2( 0.253, 0.253 )
texture = ExtResource( 1 )
